AOPによる共通処理の適用と例外処理の強化